# ucv-game

./: .editorconfig  Cargo.toml  README.md  build.sh
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html  dataprocessor.ts  game.ts  organizer.ts  player.ts  stores.ts  types.ts
frontend/src/lib/: Button.svelte  ChoiceButtons.svelte  Input.svelte  Spinner.svelte  TextInput.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Game.svelte  Login.svelte  PlayerList.svelte  Results.svelte  Votes.svelte  styles.css
frontend/src/routes/organizer-panel/: +layout.svelte  +page.svelte  Login.svelte  Panel.svelte  PlayerList.svelte  VotesList.svelte
src/: gamemaster.rs  main.rs  types.rs
src/database/: database.rs  mod.rs  sqlite.rs
src/gamemaster/: gamemaster.rs  helpers.rs  mod.rs  types.rs
src/postmaster/: json.rs  mod.rs  postmaster.rs  types.rs
src/postmaster/json/: mod.rs  parser.rs  response.rs  serializer.rs
