[package]
name = "ucv-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
tokio = { version = "1.27.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.19.0"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled", "modern-full", "chrono"] }
anyhow = "1.0.72"
chrono = "0.4.26"
